--- a/index.html
+++ b/index.html
@@ -594,12 +594,8 @@
         <p class="text-center text-white pt-4 display-6">Así empezamos</p>
         <div class="d-flex justify-content-center">
           <div class="owl-container">
-            <div
-              class="owl-carousel owl-theme"
-              data-aos="fade-right"
-              data-aos-duration="2000"
-            >
-              <div class="d-flex p-3 justify-content-center align-items-center">
+            <div class="owl-carousel owl-theme">
+              <div class="d-flex justify-content-center align-items-center">
                 <div>
                   <div class="d-flex justify-content-center align-items-center">
                     <img
@@ -611,7 +607,7 @@
                   </div>
                 </div>
               </div>
-              <div class="d-flex p-3 justify-content-center align-items-center">
+              <div class="d-flex justify-content-center align-items-center">
                 <div>
                   <div class="d-flex justify-content-center align-items-center">
                     <img
@@ -623,7 +619,7 @@
                   </div>
                 </div>
               </div>
-              <div class="d-flex p-3 justify-content-center align-items-center">
+              <div class="d-flex justify-content-center align-items-center">
                 <div>
                   <div class="d-flex justify-content-center align-items-center">
                     <img
