--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <img
             id="logo"
             loading="lazy"
-            src="./assets/img/ulisesesperanzalogo2.png"
+            src="./assets/img/circle3.png"
             class="animate__animated animate__pulse animate__infinite"
             alt="logo"
           />
@@ -90,7 +90,7 @@
           <img
             loading="lazy"
             class="name"
-            src="./assets/img/ulisesesperanzalogo2.png"
+            src="./assets/img/name1.png"
             alt="name"
             id="name"
           />
@@ -105,7 +105,7 @@
             id="audio"
             controls
             autoplay
-            src="./assets/audio/kevin-karla-and-labanda.mp"
+            src="./assets/audio/kevin-karla-and-labanda.mp3"
           ></audio>
         </div>
       </section>
@@ -502,7 +502,7 @@
           >
             <div class="card-ubicaciones">
               <p class="text-center font-paris display-4">Ceremonia</p>
-              <p class="text-center display-6">19:00hrs</p>
+              <p class="text-center display-6">18:00hrs</p>
               <div class="d-flex justify-content-center align-items-center">
                 <img
                   loading="lazy"
@@ -591,9 +591,11 @@
         </div>
       </section>
       <section class="nuestro-inicio p-4">
-        <p class="text-center text-white pt-4 display-6">Así empezamos</p>
+        <p class="text-center text-white pt-4 names">
+          José Henry Sánchez Garduza & Mixi Lizeth Rosaldo Sanchez
+        </p>
         <div class="d-flex justify-content-center">
-          <div class="owl-container">
+          <div class="owl-container gallery">
             <div class="owl-carousel owl-theme">
               <div class="d-flex justify-content-center align-items-center">
                 <div>
@@ -601,7 +603,7 @@
                     <img
                       loading="lazy"
                       class="gallery-img"
-                      src="./assets/img/esposos6.jpg"
+                      src="./assets/img/esposos5.jpg"
                       alt="Card image cap"
                     />
                   </div>
@@ -625,7 +627,43 @@
                     <img
                       loading="lazy"
                       class="gallery-img"
+                      src="./assets/img/esposos6.jpg"
+                      alt="Card image cap"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="d-flex justify-content-center align-items-center">
+                <div>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <img
+                      loading="lazy"
+                      class="gallery-img"
+                      src="./assets/img/esposos8.jpg"
+                      alt="Card image cap"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="d-flex justify-content-center align-items-center">
+                <div>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <img
+                      loading="lazy"
+                      class="gallery-img"
                       src="./assets/img/esposos3.jpg"
+                      alt="Card image cap"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="d-flex justify-content-center align-items-center">
+                <div>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <img
+                      loading="lazy"
+                      class="gallery-img"
+                      src="./assets/img/esposos9.jpg"
                       alt="Card image cap"
                     />
                   </div>
@@ -689,7 +727,7 @@
                     alt="logo"
                   />
                 </div>
-                <div class="d-flex justify-content-center">
+                <!-- <div class="d-flex justify-content-center">
                   <a
                     target="_blank"
                     href="https://mesaderegalos.liverpool.com.mx/milistaderegalos/51316191"
@@ -701,7 +739,7 @@
                         class="bi bi-box-arrow-up-right"
                       ></i></button
                   ></a>
-                </div>
+                </div> -->
               </div>
               <!-- <div class="col-md-6">
                 <div class="pt-4 d-flex justify-content-center">
@@ -770,8 +808,8 @@
         </p>
         <div class="d-flex justify-content-center align-items-center">
           <p class="w-50 py-4" data-aos="fade-in" data-aos-duration="3000">
-            <i class="bi bi-ticket font-icon"></i>Por favor, danos la respuesta
-            de tu asistencia al evento antes del 15 de Diciembre
+            Por favor, danos la respuesta de tu asistencia al evento antes del
+            15 de Diciembre
           </p>
         </div>
         <div class="pb-2">
@@ -818,7 +856,7 @@
             target="_blank"
             href="https://wa.me/524426147355?text=Hola%20Esmeralda!%20Me%20interesa%20contratar%20tu%20servicio"
             class="marca"
-            >Esmeralda <i class="bi bi-whatsapp"></i
+            >Digital Invite<i class="bi bi-whatsapp"></i
           ></a>
         </p>
       </section>
