--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
                 <p class="text-white cuenta-regresiva m-0 text-center">
                   Viernes
                 </p>
-                <p class="text-white text-center font-paris display-4">
+                <p
+                  class="text-white text-center font-paris display-4 pl-2 pr-2"
+                >
                   29 <span>de</span> Diciembre <span>de</span> 2023
                 </p>
               </div>
