--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             class="animate__animated animate__pulse animate__infinite"
             alt="logo"
           />
+          <div class="pulse">pulse aquí</div>
         </button>
       </div>
     </div>
